--- a/style.css
+++ b/style.css
@@ -45,7 +45,7 @@ p {
 
 button {
   height: 40px;
-  width: 10rem;
+  width: 13rem;
   border-radius: 50px;
   background-color: white;
   box-shadow: 1px 1px 3px gray, -1px -1px 3px gray;
@@ -79,9 +79,18 @@ a:hover {
 }
 
 @media (max-width: 760px) {
+  
+  .section1,
+.section2 {
+  width: 90%;
+}
+.section2 {
+  display: flex;
+      flex-direction: column;    
+      align-items: center;
+}
   .image img {
     display: flex;
-    /* justify-content: center; */
     margin: auto;
   }
   body {
